--- a/panel.html
+++ b/panel.html
@@ -171,11 +171,14 @@ async function guardarExcepcion(profId) {
     
    
 <li>
-  <button onclick="window.location.href = 'https://script.google.com/macros/s/AKfycbwoMrST65VYe0clgWl9jBadBMQBkk-3a8BpU4nC0inmlC3iFvMBdtuajIsXiOplONHB/exec?username='+encodeURIComponent(username)+'&userId='+encodeURIComponent(userId);">
-    Créditos +
-  </button>
-</li>
-
+    <button onclick="
+      window.location.href='/creditos.html?username='
+      + encodeURIComponent(username)
+      + '&userId=' + encodeURIComponent(userId);
+    ">
+      💳 Créditos
+    </button>
+  </li>
 
 
 
