--- a/creditos.html
+++ b/creditos.html
@@ -21,7 +21,7 @@
   <button onclick="volverPanel()">⬅ Volver</button>
 
 <script>
-const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbwkMyai_hfp4s1OKZ1MFqPKMEfKnNhVi3wmlYa8B-CLspbodGD_KBEngK1lZ6ALlxdb5Q/exec"; // <--- reemplazá con la URL de tu Web App de Apps Script
+const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbzmODr3HZpS-VKFojM1NIggSQddj_hwlU_k2U-xlcny7HQolAx-RbahVf-ZYA_3IcDn/exec"; // URL de tu Apps Script
 
 let username, userId;
 
@@ -42,20 +42,21 @@ function comprarCreditos() {
   const cantidad = parseInt(document.getElementById("cantidadCreditos").value, 10);
   if (!cantidad || cantidad <= 0) return alert("Cantidad inválida");
 
-  // Crea preferencia en Mercado Pago
-  fetch(`${WEBAPP_URL}?action=crearPreferencia&username=${encodeURIComponent(username)}&cantidad=${cantidad}`)
+  // Crear preferencia
+  fetch(`${WEBAPP_URL}?action=crearPreferencia&username=${encodeURIComponent(username)}&userId=${encodeURIComponent(userId)}&cantidad=${cantidad}`)
     .then(r => r.json())
     .then(data => {
-      if (data.url) window.open(data.url, "_blank");
-      else alert("Error al generar link de pago");
+      if (data.url) {
+        window.open(data.url, "_blank"); // abre Mercado Pago
+      } else {
+        alert("Error al generar link de pago");
+      }
     });
 }
 
-function volverPanel() {
-  window.history.back();
-}
+function volverPanel() { window.history.back(); }
 
-// Inicializa al cargar la página
+// Inicializa
 const urlParams = new URLSearchParams(window.location.search);
 init({
   username: urlParams.get('username'),
