--- a/exito.html
+++ b/exito.html
@@ -4,22 +4,32 @@
 <meta charset="UTF-8">
 <title>Pago Exitoso</title>
 <style>
-  body { font-family: Arial; padding:20px; text-align:center; }
-  h1 { color: green; }
-  button { padding:8px 15px; margin-top:20px; cursor:pointer; }
+  body { font-family: Arial; text-align:center; padding:50px; }
+  h2 { color: green; }
 </style>
 </head>
 <body>
-  <h1>✅ ¡Pago realizado con éxito!</h1>
-  <p>Se han acreditado <span id="cantidad">0</span> créditos a tu cuenta.</p>
-  <button onclick="volverPanel()">⬅ Volver al Panel</button>
+<h2>✅ ¡Pago realizado con éxito!</h2>
+<p>Estamos acreditando tus créditos...</p>
 
 <script>
-const urlParams = new URLSearchParams(window.location.search);
-document.getElementById("cantidad").innerText = urlParams.get("cantidad") || 0;
+const params = new URLSearchParams(window.location.search);
+const externalRef = params.get('external_reference');
 
-function volverPanel() {
-  window.location.href = '/panel.html'; // o la ruta correcta de tu panel
+if(externalRef){
+  const [username, cantidadStr] = externalRef.split("|");
+  const cantidad = parseInt(cantidadStr, 10);
+
+  fetch(`https://script.google.com/macros/s/AKfycbxhH4xPu4hhu3hD63AWz1LSMzq6exTSjFB7roCpwQZSFAN3IDtwRJY7b3X3MphgLzql/exec?action=sumaCreditos&username=${username}&cantidad=${cantidad}`)
+    .then(res => res.text())
+    .then(() => {
+      document.body.innerHTML += "<p>Créditos sumados correctamente.</p>";
+      setTimeout(()=> window.close(), 2000);
+    })
+    .catch(err => {
+      document.body.innerHTML += "<p>⚠ Error al sumar créditos.</p>";
+      console.error(err);
+    });
 }
 </script>
 </body>
