--- a/username.html
+++ b/username.html
@@ -104,7 +104,16 @@ async function cargarTurnos(fechaStr) {
   document.getElementById("turnos").innerHTML = `<h2>Turnos del ${fechaStr}</h2><p>Cargando...</p>`;
   document.getElementById("reservaFormContainer").style.display = "none";
 
-
+// ------------------ CHEQUEAR CRÉDITOS ------------------
+  const creditosRes = await fetch(`${DESCONTAR_API_URL}?action=getCreditos&username=${username}`);
+  const creditosData = await creditosRes.json();
+  
+  if (creditosData.creditos <= 0) {
+    document.getElementById("turnos").innerHTML = `
+      <p>El usuario ${username} no tiene créditos suficientes para reservar turnos.</p>
+    `;
+    return; // termina la función aquí, no se muestra formulario
+  }
   const res = await fetch(`${API_URL}?username=${username}&fecha=${fechaStr}`);
   const data = await res.json();
 
