--- a/username.html
+++ b/username.html
@@ -104,16 +104,19 @@ async function cargarTurnos(fechaStr) {
   document.getElementById("turnos").innerHTML = `<h2>Turnos del ${fechaStr}</h2><p>Cargando...</p>`;
   document.getElementById("reservaFormContainer").style.display = "none";
 
-// ------------------ CHEQUEAR CRÉDITOS ------------------
+/ ------------------ CHEQUEAR CRÉDITOS ------------------
+let tieneCreditos = true;
+try {
   const creditosRes = await fetch(`${DESCONTAR_API_URL}?action=getCreditos&username=${username}`);
   const creditosData = await creditosRes.json();
-  
   if (creditosData.creditos <= 0) {
-    document.getElementById("turnos").innerHTML = `
-      <p>El usuario ${username} no tiene créditos suficientes para reservar turnos.</p>
-    `;
-    return; // termina la función aquí, no se muestra formulario
+    tieneCreditos = false;
   }
+} catch (err) {
+  console.error("Error al obtener créditos", err);
+  tieneCreditos = false; // por seguridad, asumir que no tiene
+}
+
   const res = await fetch(`${API_URL}?username=${username}&fecha=${fechaStr}`);
   const data = await res.json();
 
