--- a/username.html
+++ b/username.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Turnos Disponibles</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
   /* Reset y tipografía */
   * { box-sizing: border-box; margin:0; padding:0; }
